Some changes in pom to fit java 11